--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "css-loader": "^0.26.2",
+    "node-sass": "^4.5.0",
     "office-ui-fabric-react": "^1.12.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "sass-loader": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -22,6 +25,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
